adicionado sistema de logout e biblioteca sweetAlert

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "apexcharts": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "sweetalert2": "^11.14.5"
   }
 }
